--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h1 class="titles">CASE STUDIES</h1>
             <div class="workGrid" id="workGrid">
                 <div class="mockup1">
-                    <img src="images/inklink.jpg" alt="phone mockup with the inklink homepage">
+                    <img id="mockup" src="images/inklink.jpg" alt="phone mockup with the inklink homepage">
                 </div>
 
                 <div class="description1">
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="mockup2">
-                    <img src="images/education.jpg" alt="computer and phone mockup with the DOE homepage">
+                    <img id="mockup" src="images/education.jpg" alt="computer and phone mockup with the DOE homepage">
                 </div>
 
                 <div class="description2">
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="mockup3">
-                    <img src="images/nonprofit.jpg" alt="computer and phone mockup with the CARE homepage">
+                    <img id="mockup" src="images/nonprofit.jpg" alt="computer and phone mockup with the CARE homepage">
                 </div>
 
                 <div class="description3">
